--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-responsive": "^10.0.1",
     "remixicon": "^4.8.0",
     "three": "^0.182.0"
   },
