--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-responsive": "^10.0.1",
     "remixicon": "^4.8.0",
+    "spline": "^0.0.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
